[package]
name = "switchtube-rs"
authors = ["Jeremy Stucki"]
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.21", features = ["derive", "env"] }
futures = "0.3.24"
indicatif = { version = "0.17.1", features = ["tokio"] }
reqwest = { version = "0.11.11", features = ["json", "stream"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["macros"] }
url = "2.3.1"
